<resources>
    <string name="app_name">WORDO</string>
    <string name="app_id">349620969615</string>
    <string name="package_name">com.wordo</string>
    <string name="leaderboard_high_scores">CgkIj8GiuJYKEAIQBg</string>
    <string name="banner_home_footer">ca-app-pub-8012295779816092/3952714165</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-8012295779816092/2620424962</string>
    <string name="textSelectDifficulty">Select Difficulty</string>
    <string name="textLeaderboard">Leaderboard</string>
    <string name="textScore">0\nMy WORDO Score</string>
    <string name="textSettings">Settings</string>
    <string name="textShare">Share</string>
    <string name="textPlay">Play</string>
    <string name="textBallRadius">Ball Radius</string>
    <string name="textBallSpeed">Ball Speed</string>
    <string name="textSound">Sound</string>
    <string name="textFavorite">Add to favorite</string>
    <string name="textFavoriteAdded">Added to favorite</string>
    <string name="textWordDetails">Enzyme</string>
    <string name="textWhatHappenedInPreviousGame">Bravo !</string>
    <string name="textHome">Home</string>
    <string name="textNext">Next</string>
    <string name="textSelectlevel">Select Level</string>
    <string name="textTask">Task</string>
    <string name="textCancel">Cancel</string>
    <string name="textOk">OK</string>
    <string name="textAmateur">Amateur</string>
    <string name="textSemiPro">Semi Pro</string>
    <string name="textProfessional">Professional</string>
    <string name="textWorldClass">World Class</string>
    <string name="textLegendary">Legendary</string>
    <string name="textOnlyPossibleWord">It is the only possible word.</string>
    <string name="storedSelectDifficulty">Difficulty Level</string>
    <string name="storedBallRadius">Ball Radius</string>
    <string name="storedBallSpeed">Ball Speed</string>
    <string name="storedSound">Sound</string>
    <string name="storedMyWordoScore">Score</string>
    <string name="storedQuery">Query</string>
    <string name="storedAmateurScore">Amateur</string>
    <string name="storedSemiProScore">Semi Pro</string>
    <string name="storedProfessionalScore">Professional</string>
    <string name="storedWorldClassScore">World Class</string>
    <string name="storedLegendaryScore">Legendary</string>
    <string name="storedLicenceStatus">Licence Status</string>
</resources>
