<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_weight="0.33"
        android:orientation="horizontal">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/btnSelectDifficulty"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/layers_select_difficulty_button_bg"
                android:text="@string/textSelectDifficulty" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/btnLeaderboard"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/layers_leaderboard_button_bg"
                android:text="@string/textLeaderboard" />
        </TableRow>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_weight="0.33">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/btnScore"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/layers_score_bg"
                android:text="@string/textScore" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/btnSettings"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/layers_settings_button_bg"
                android:text="@string/textSettings" />
        </TableRow>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_weight="0.33">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/btnShare"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/layers_share_button_bg"
                android:text="@string/textShare" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/btnPlay"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/layers_play_button_bg"
                android:text="@string/textPlay" />
        </TableRow>
    </TableRow>
</LinearLayout>