<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/unlocked"
        android:contentDescription="@string/textBallRadius" />

    <TextView
        android:id="@+id/textDifficulty"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/color_green" />

    <TextView
        android:id="@+id/textLevel"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:textColor="@color/color_green" />

    <TextView
        android:id="@+id/textHint"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:maxLines = "4"
        android:layout_gravity="start"
		android:scrollbarSize="10dp"
		android:fadeScrollbars="false"
		android:scrollbars="vertical"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/time"
            android:contentDescription="@string/textBallRadius" />

        <TextView
            android:id="@+id/textTime"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textSelectDifficulty" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/score"
            android:contentDescription="@string/textBallRadius" />

        <TextView
            android:id="@+id/textScore"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textSelectDifficulty" />
    </TableRow>

    <Button
        android:id="@+id/btnPlay"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_level_dialog_play_bg"
        android:text="@string/textPlay" />

</LinearLayout>